<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="match_parent"
	android:layout_width="match_parent">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@id/linearLayoutHeader"
		android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
		android:layout_marginBottom="5dip" android:layout_weight="0.1">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal"
			style="@style/TitelTextBold" android:id="@id/txt_ergebnis_neuanlegen_titel"
			android:text="@string/txt_ergebnis_neuanlegen_titel"></TextView>
	</LinearLayout>
	<TableLayout android:id="@+id/tableLayout1"
		android:layout_height="wrap_content" android:layout_width="match_parent"
		android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
		android:layout_marginBottom="5dip" android:layout_weight="5">
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow08">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/txt_ergebnis_neuanlegen_gesamtergebnis"
				android:id="@+id/TextView08" android:width="@dimen/txt_ergebnis_anlegen_column_width"></TextView>
			<EditText android:text="@string/edt_ergebnis_neuanlegen_gesamtergebnis"
				android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:id="@id/edt_ergebnis_neuanlegen_gesamtergebnis" 
				android:inputType="number">
				</EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow07" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_ergebnis_50_1" android:width="@dimen/txt_ergebnis_anlegen_column_width" android:text="@string/txt_ergebnis_neuanlegen_ergebnis_50_1"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_ergebnis_50_1" android:text="@string/edt_ergebnis_neuanlegen_ergebnis_50_1" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow06" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/txt_ergebnis_neuanlegen_ergebnis_50_2" android:width="@dimen/txt_ergebnis_anlegen_column_width" android:id="@id/txt_ergebnis_neuanlegen_ergebnis_50_2"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_ergebnis_50_2" android:text="@string/edt_ergebnis_neuanlegen_ergebnis_50_2" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow05" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_volle_50_1" android:text="@string/txt_ergebnis_neuanlegen_volle_50_1" android:width="@dimen/txt_ergebnis_anlegen_column_width"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_volle_50_1" android:text="@string/edt_ergebnis_neuanlegen_volle_50_1" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow04" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_volle_50_2" android:text="@string/txt_ergebnis_neuanlegen_volle_50_2"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_volle_50_2" android:text="@string/edt_ergebnis_neuanlegen_volle_50_2" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow03" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_abraeumen_50_1" android:text="@string/txt_ergebnis_neuanlegen_abraeumen_50_1" android:width="@dimen/txt_ergebnis_anlegen_column_width"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_abraeumen_50_1" android:text="@string/edt_ergebnis_neuanlegen_abraeumen_50_1" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow02" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_abraeumen_50_2" android:text="@string/txt_ergebnis_neuanlegen_abraeumen_50_2" android:width="@dimen/txt_ergebnis_anlegen_column_width"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_abraeumen_50_2" android:text="@string/edt_ergebnis_neuanlegen_abraeumen_50_2" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/TableRow01" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_fehl_50_1" android:text="@string/txt_ergebnis_neuanlegen_fehl_50_1" android:width="@dimen/txt_ergebnis_anlegen_column_width"></TextView>
			<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@color/TITEL_COLOR" android:id="@id/edt_ergebnis_neuanlegen_fehl_50_1" android:text="@string/edt_ergebnis_neuanlegen_fehl_50_1" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number"></EditText>
		</TableRow>

		<TableRow android:id="@+id/tableRow2" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_marginTop="@dimen/edt_ergebnis_anlegen_row_filler">
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:id="@id/txt_ergebnis_neuanlegen_fehl_50_2" android:text="@string/txt_ergebnis_neuanlegen_fehl_50_2" android:width="@dimen/txt_ergebnis_anlegen_column_width">
				<!-- android:layout_column="1" -->
			</TextView>
			<EditText android:layout_height="wrap_content" android:background="@color/TITEL_COLOR"
				android:layout_width="match_parent" android:id="@id/edt_ergebnis_neuanlegen_fehl_50_2" android:text="@string/edt_ergebnis_neuanlegen_fehl_50_2" android:width="@dimen/edt_ergebnis_anlegen_column_width" android:inputType="number">
			</EditText>
		</TableRow>
	</TableLayout>
	<LinearLayout android:layout_width="match_parent"
		android:id="@id/linearLayoutFooter" android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip" android:layout_height="wrap_content"
		android:layout_weight="1" android:layout_marginBottom="5dip">
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="bottom"
			android:id="@id/sf_ergebnis_neuanlagen_ok" android:text="@string/sf_ergebnis_neuanlagen_ok" style="@style/ActionButton" android:width="@dimen/action_button_90"></Button>
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="bottom"
			android:id="@id/sf_ergebnis_neuanlagen_abbruch" android:text="@string/sf_ergebnis_neuanlagen_abbrechen" style="@style/ActionButton" android:width="@dimen/action_button_90"></Button>
	</LinearLayout>
</LinearLayout>
