<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="match_parent"
	android:layout_width="match_parent">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@id/linearLayoutHeader" android:layout_marginLeft="5dip"
		android:layout_marginRight="5dip" android:layout_marginBottom="5dip">
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal"
			style="@style/TitelTextBold" android:id="@id/txt_spieler_neuanlegen_titel" android:text="@string/txt_spieler_neuanlegen_titel"></TextView>
	</LinearLayout>
	<TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:layout_marginBottom="5dip">
		<TableLayout android:layout_marginRight="5dip" android:id="@+id/TableLayout01" android:layout_marginBottom="5dip" android:layout_width="match_parent" android:layout_marginLeft="5dip" android:layout_height="wrap_content">
			<TableRow android:layout_marginBottom="5dip" android:id="@+id/TableRow05" android:layout_height="wrap_content" android:layout_width="match_parent">
				<TextView android:id="@+id/TextView03" android:text="@string/txt_spieler_neuanlegen_passnr" android:layout_width="wrap_content" android:width="@dimen/txt_spieler_anlegen_column_width" android:layout_height="wrap_content"></TextView>
				<EditText android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:inputType="number" android:id="@id/edt_spieler_neuanlegen_passnr"></EditText>
			</TableRow>
			<TableRow android:layout_marginBottom="5dip" android:id="@+id/TableRow07" android:layout_height="wrap_content" android:layout_width="match_parent">
				<TextView android:id="@+id/TextView02" android:text="@string/txt_spieler_neuanlegen_name" android:layout_width="wrap_content" android:width="@dimen/txt_spieler_anlegen_column_width" android:layout_height="wrap_content"></TextView>
				<EditText android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:inputType="text|textAutoComplete" android:id="@id/edt_spieler_neuanlegen_name"></EditText>
			</TableRow>
			<TableRow android:layout_marginBottom="5dip" android:id="@+id/TableRow04" android:layout_height="wrap_content" android:layout_width="match_parent">
				<TextView android:id="@+id/TextView04" android:text="@string/txt_spieler_neuanlegen_vorname" android:layout_width="wrap_content" android:width="@dimen/txt_spieler_anlegen_column_width" android:layout_height="wrap_content"></TextView>
				<EditText android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:inputType="text|textAutoComplete" android:id="@id/edt_spieler_neuanlegen_vorname"></EditText>
			</TableRow>
			<TableRow android:layout_marginBottom="5dip" android:id="@+id/TableRow06" android:layout_height="wrap_content" android:layout_width="match_parent">
				<TextView android:id="@+id/TextView01" android:text="@string/txt_spieler_neuanlegen_gebdatum" android:layout_width="wrap_content" android:width="@dimen/txt_spieler_anlegen_column_width" android:layout_height="wrap_content"></TextView>
				<EditText android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:inputType="text|textAutoComplete" android:id="@id/edt_spieler_neuanlegen_gebdatum"></EditText>
			</TableRow>
			<TableRow android:layout_marginBottom="5dip" android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="match_parent">
				<TextView android:layout_width="wrap_content" android:width="@dimen/txt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:id="@id/txt_spieler_neuanlegen_latitude" android:text="@string/txt_spieler_neuanlegen_latitude"></TextView>
				<EditText android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:id="@id/edt_spieler_neuanlegen_latitude" android:inputType="number|numberDecimal"></EditText>
			</TableRow>
			<TableRow android:layout_marginBottom="5dip" android:id="@+id/tableRow2" android:layout_height="wrap_content" android:layout_width="match_parent">
				<TextView android:layout_width="wrap_content" android:width="@dimen/txt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:id="@id/txt_spieler_neuanlegen_longitude" android:text="@string/txt_spieler_neuanlegen_longitude"></TextView>
				<EditText android:background="@color/TITEL_COLOR" android:layout_width="match_parent" android:width="@dimen/edt_spieler_anlegen_column_width" android:layout_height="wrap_content" android:id="@id/edt_spieler_neuanlegen_longitude" android:inputType="number|numberDecimal"></EditText>
			</TableRow>
		</TableLayout>
	</TableLayout>
	<LinearLayout android:layout_width="match_parent"
		android:id="@id/linearLayoutFooter"
		android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
		android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="5dip">
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sf_spieler_neuanlagen_ok" android:layout_gravity="bottom" android:id="@id/sf_spieler_neuanlagen_ok" style="@style/ActionButton" android:width="@dimen/action_button_90"></Button>
		<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom" android:id="@id/sf_spieler_neuanlagen_abbruch" android:text="@string/sf_spieler_neuanlagen_abbrechen" style="@style/ActionButton" android:width="@dimen/action_button_90"></Button>
	</LinearLayout>
</LinearLayout>
